# linkStore

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
linkStore/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
store/data/: parser.py
store/migrations/: 0001_initial.py  0002_alter_link_type.py  0003_alter_link_type.py  0004_alter_link_url.py  0005_link_read_count_alter_link_type.py  0006_tag_owner_topic_owner.py  0007_alter_link_options_alter_tag_options_and_more.py  0008_alter_link_title.py  0009_alter_link_topic.py  0010_alter_link_options_rename_is_starred_link_is_marked_and_more.py  0011_link_owner.py
store/static/store/css/: style.css
store/static/store/js/: checkbox.js  list_view_datatables_init.js  readCountLogic.js  utilFunctions.js
store/templates/store/: base.html  base_detail.html  base_landing_login.html  base_list.html  base_view.html  create_update_view.html  delete_view.html  home.html  index.html  landing.html  link_detail.html  link_list.html  links.html  pages.html  profile.html  profile_edit.html  stats.html  store.html  tag.html  tag_detail.html  tag_list.html  topic.html  topic_detail.html  topic_list.html  topics.html
users/: forms.py  models.py  urls.py  views.py
users/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
